--- a/about.html
+++ b/about.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rólunk</title>
 </head>
-
 <body>
+    
+    <h2>Navigálás</h2>
     <ul>
         <li>
-            <a href="/">Home</a>
+            <a href="/">Kezdőlap</a>
         </li>
         <li>
-            <a href="/pages/product.html">Products</a>
+            <a href="/pages/products.html">Temékek</a>
         </li>
         <li>
-            <a href="/pages/orders.html">Orders</a>
+            <a href="/pages/orders.html">Megrendelések</a>
         </li>
         <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html">Rólunk</a>
         </li>
     </ul>
-    <h1>About</h1>
+
+    <h1>
+        Rólunk
+    </h1>
 
     <table>
-        <caption>Opening hours</caption>
+        <caption>
+            Nyitvatartás
+        </caption>
         <thead>
             <tr>
-                <th>Day</th>
-                <th>Open</th>
-                <th>Close</th>
+                <th>Nap</th>
+                <th>Nyitás</th>
+                <th>Zárás</th>
             </tr>
         </thead>
-        <tr>
-            <td>Monday - Friday</td>
-            <td>09:00</td>
-            <td rowspan="2">21:00</td>
-        </tr>
-        <tr>
-            <td>Saturday</td>
-            <td>10:00</td>
-        </tr>
-        <tr>
-            <td>Sunday</td>
-            <td colspan="2">closed</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Hétfő - Péntek</td>
+                <td>09:00</td>
+                <td rowspan="2">21:00</td>
+            </tr>
+            <tr>
+                <td>Szombat</td>
+                <td>10:00</td>
+            </tr>
+            <tr>
+                <td>Vasárnap</td>
+                <td colspan="2">Zárva</td>
+            </tr>
+        </tbody>
         <tfoot>
             <tr>
                 <td colspan="3">
-                    &copy;2020
+                    &copy; 2020
                 </td>
             </tr>
         </tfoot>
     </table>
 </body>
-
 </html>
