--- a/pages/products.html
+++ b/pages/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megrendelések</title>
+    <title>Termékek</title>
 </head>
 <body>
     
@@ -23,11 +23,11 @@
         </li>
     </ul>
     <h1>
-        Megrendelések
+        Termékek
     </h1>
 
     <p>
-        Itt lesznek a megrendelések megjelenítve...
+        Itt a választható termékek lesznek felsorolva...
     </p>
 </body>
 </html>
