--- a/index.html
+++ b/index.html
@@ -1,53 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu-HU">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Egy szuper oldal</title>
+    <title>Kezdőlap</title>
 </head>
 
 <body>
+    <h2>Navigálás</h2>
     <ul>
         <li>
-            <a href="/">Home</a>
+            <a href="/">Kezdőlap</a>
         </li>
         <li>
-            <a href="/pages/product.html">Products</a>
+            <a href="/pages/products.html">Temékek</a>
         </li>
         <li>
-            <a href="/pages/orders.html">Orders</a>
+            <a href="/pages/orders.html">Megrendelések</a>
         </li>
         <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html">Rólunk</a>
         </li>
     </ul>
-    <h1>Fantastic Burger</h1>
+
+    <h1>
+        Fantasztikus Burger-ek
+    </h1>
+
     <ul>
-        <li>Meat lover
+        <li>
+            Hús imádó
             <ul>
-                <li>Beef</li>
-                <li>Pork</li>
-                <li>Turkey</li>
+                <li>Marha</li>
+                <li>Sertés</li>
+                <li>Kecske</li>
+                <li>Bárány</li>
+                <li>Bálna</li>
             </ul>
         </li>
-        <li>Vegetarian</li>
-        <li>Piedone</li>
+        <li>
+            Vegetáriánus
+        </li>
+        <li>
+            Magyaros
+        </li>
     </ul>
 
-    <ol>
-        <li>Choose a burger</li>
-        <li>Buy it</li>
-        <li>Give your address</li>
-        <li>Eat it</li>
-    </ol>
+    <h2>
+        Feltétek
+    </h2>
+    <ul>
+        <li>
+            Paradicsom
+        </li>
+        <li>
+            Uborka
+        </li>
+        <li>
+            Paprika
+        </li>
+        <li>
+            Csípős csili szósz
+        </li>
+    </ul>
 
-    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/">Barbecued Burgers</a>
-    <a href="pages/orders.html">Orders</a>
-    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/" target="_blank"><img src="images/hamburger.png"
-            width="56" alt="hamburger"></a>
-
+    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/">
+        Barbecue-s Burger
+    </a>
+    <a href="pages/orders.html">Megrendelések</a>
+    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/" target="blank">
+        <img width="56" src="images/barbecue_burger.jpg" alt="Barbecue-s burger">
+    </a>
 
 </body>
 
